# mixed-fem

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  README.md  derivs.m  derivs_shell.m
apps/: cloth_sim.cpp  collision2d_sim.cpp  compare_iterative.cpp  convergence.cpp  convergence_collision.cpp  convergence_iterative.cpp  energy.cpp  energy_old.cpp  hetero_tet_sim.cpp  kill_ccd.cpp  main.cpp  mixed_sim.cpp  newton_decrement.cpp  polyscope_app.h  rod_sim.cpp  sim2d.cpp  sim3d.cpp  sim3d_gpu.cpp  tet_sim.cpp  tri2d_sim.cpp
cmake/: FindGeogram.cmake  FindThrust.cmake  ccd.cmake
implot/: implot.cpp  implot.h  implot_internal.h  implot_items.cpp
mfem-derivation/: derivs.tex  mixed-fem-derivation.tex  setup.tex  sqp.tex  system_quad.tex
models/mesh/: .gitignore  bar.mesh  cylinder.mesh  dolphin.mesh  dragon_low.mesh  slab.mesh
scenes/2D/: boundary_conditions.json  diving_board.json  diving_board_deformed.json  diving_board_deformed2.json  diving_board_deformed_fem.json  diving_board_deformed_mfem.json  external_forces.json  press.json  press2.json  ramp.json  soft_blocks.json  soft_blocks_drop.json  square.json  square_falling.json  stuff.json  test_tunneling.json  three_blocks.json  trampoline.json
scenes/3D/: beam_cantilever.json  beam_stretch.json  beam_twist.json  boat.json  bunny.json  bunny_coarse.json  collision_bunny_bar.json  collision_bunny_box.json  collision_bunny_press.json  collision_bunny_squish.json  collision_corona.json  collision_cylinder_astro.json  collision_cylinder_beam.json  collision_cylinder_beam_deformed.json  collision_dragon_stretch.json  collision_drop_bar.json  collision_drop_box.json  collision_drop_bunny.json  collision_drop_ducks.json  collision_drop_octopus3.json  collision_drop_ramp.json  collision_drop_spot.json  collision_drop_spot2.json  collision_drop_spot3.json  collision_drop_spot_deformed.json  collision_pachinko.json  collision_press_dolphin.json  collision_press_dragon.json  collision_press_dragon2.json  collision_press_octopus.json  collision_press_test.json  collision_roller_bunny.json  collision_roller_gummy.json  collision_spot.json  collision_squish_bunny.json  collision_squish_shiba.json  collision_squish_spot.json  collision_trampoline.json  collision_two_bunnies.json  corona_randomize.json  (+14 more)
scenes/data/: beam_cantilever_v_0015.dmat  beam_cantilever_x0_0015.dmat  beam_cylinder_v_0017.dmat  beam_cylinder_v_0024.dmat  beam_cylinder_x0_0017.dmat  beam_cylinder_x0_0024.dmat  bunny_squish_v_0026.dmat  bunny_squish_x0_0026.dmat  dragon_v_0096.dmat  dragon_v_0145.dmat  dragon_x0_0096.dmat  dragon_x0_0145.dmat
scripts/: Copy_of_plot_iterative_convergence.m  SHTUFF.ipynb  cloth_deriv.m  compare-coll-convergence.ipynb  compare-convergence.ipynb  deriv_dist.m  derivs.m  fcr_hessian.m  fun_with_preconditioning.asv  fun_with_preconditioning.m  gradient.m  hessian.m  iterative-residuals.ipynb  plot_convergence.m  plot_iterative_convergence.m  plot_timing.ipynb  sappinv.m  segment_mesh.m  subspace_solver.asv  subspace_solver.m  timing_plots.ipynb  timing_stats.ipynb  tmp.json
scripts/.ipynb_checkpoints/: SHTUFF-checkpoint.ipynb  compare-coll-convergence-checkpoint.ipynb  tmp-checkpoint.json
scripts/distances/: line_line.m  point_line.m  point_plane.m  point_point.m
scripts/mats/: Gla_sub.mkt  Makefile  la_sub.mkt  lhs2.mkt  lhs_Gs.mkt  lhs_Gx.mkt  lhs_Gx2.mkt  lhs_K.mkt  lhs_M.mkt  lump_sub.mkt  p_sub.mkt  rhs2.mkt  rhs_gl.mkt  rhs_gs.mkt  rhs_sub.mkt  rhs_x.mkt  s_sub.mkt  x_sub.mkt  y_sub.mkt
src/: Singular_Value_Decomposition_Preamble.hpp  arap.cpp  arap.h  boundary_conditions.cpp  boundary_conditions.h  config.cpp  config.h  corotational.cpp  corotational.h  kkt.cpp  kkt.h  linesearch.h  main.cpp  neohookean.cpp  neohookean.h  notes  pcg.h  pinning_matrix.cpp  pinning_matrix.h  preconditioner.cpp  preconditioner.h  rod_kkt.cpp  rod_kkt.h  simulation.cpp  simulation.h  simulation_state.cpp  simulation_state.h  simulator.cpp  simulator.h  sparse_utils.cpp  sparse_utils.h  svd3x3_sse.h  tet_kkt.cpp  tet_kkt.h  tri_kkt.cpp  tri_kkt.h
src/baseline/: AABB.cpp  AABB.h  CTCD.cpp  CTCD.h  ClassicCCD.cpp  ClassicCCD.h
src/boundary_conditions/: bend_boundary_condition.h  boundary_condition.cpp  boundary_condition.h  external_force.h  fixed_boundary_conditions.h  moving_boundary_condition.h  press_force.h  stretch_boundary_condition.h  torque_force.h  twist_and_stretch_boundary_condition.h  twist_boundary_condition.h
src/bvh/: AABBTree.cpp  AABBTree_ray_intersect.cpp  box_box_intersect.cpp  find_all_intersecting_pairs_using_AABBTrees.cpp  insert_box_into_box.cpp  insert_triangle_into_box.cpp  marking-scheme.md  nearest_neighbor_brute_force.cpp  point_AABBTree_squared_distance.cpp  point_box_squared_distance.cpp  ray_intersect_box.cpp  ray_intersect_triangle.cpp  ray_intersect_triangle_mesh_brute_force.cpp  triangle_triangle_intersection.cpp
src/ccd/: ConvexPolyhedron.h  MTMesh.h  additive_ccd.cpp  additive_ccd.h  broadphase_spacetime.cpp  broadphase_spacetime.h  quadprog_ccd.cpp  quadprog_ccd.h
src/energies/: arap.cpp  arap.cu  arap.cuh  arap.h  corotational.cpp  corotational.h  fixed_corotational.cpp  fixed_corotational.cuh  fixed_corotational.h  fung.cpp  fung.h  material_model.h  material_model_factory.cpp  neohookean.cpp  stable_neohookean.cpp  stable_neohookean.h
src/factories/: boundary_condition_factory.cpp  boundary_condition_factory.h  factory.h  integrator_factory.cpp  integrator_factory.h  linear_solver_factory.cpp  linear_solver_factory.h  material_model_factory.cpp  material_model_factory.h  optimizer_factory.cpp  optimizer_factory.h  solver_factory.cpp  solver_factory.h  variable_factory.cpp  variable_factory.h
src/linear_solvers/: affine_pcg.h  amgcl_solver.h  arap_preconditioner.h  block_matrix.h  deflated_solver.h  eigen_iterative_solver.h  eigen_solver.h  ginkgo_affine_solver.h  ginkgo_matrix.cu  ginkgo_matrix.h  (+10 more)
tests/: CMakeLists.txt  test_common.h  test_constraint_energies.cpp  test_dsvd.cpp  test_jacobian.cpp  test_penalty_energies.cpp  test_rotation_deriv.cpp  test_sym_constraint_energies.cpp
(+695 files in other folders)
